--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     </div>
                     <div class="grid__block_bottom">
                         <p class="grid__block_title">Карачаево-Черкессия</p>
+                        <img class="grid__block_bottom_like_button" src="img/Like Button.svg" alt="Like Button">
                     </div>
                 </div>
                 <div class="grid__block">
@@ -37,6 +38,7 @@
                     </div>
                     <div class="grid__block_bottom">
                         <p class="grid__block_title">Домбай</p>
+                        <img class="grid__block_bottom_like_button" src="img/Like Button.svg" alt="Like Button">
                     </div>
                 </div>
                 <div class="grid__block">
@@ -45,6 +47,7 @@
                     </div>
                     <div class="grid__block_bottom">
                         <p class="grid__block_title">Гора Эльбрус</p>
+                        <img class="grid__block_bottom_like_button" src="img/Like Button.svg" alt="Like Button">
                     </div>
                 </div>
                 <div class="grid__block">
@@ -53,6 +56,7 @@
                     </div>
                     <div class="grid__block_bottom">
                         <p class="grid__block_title">Тамбукан</p>
+                        <img class="grid__block_bottom_like_button" src="img/Like Button.svg" alt="Like Button">
                     </div>
                 </div>
                 <div class="grid__block">
@@ -61,6 +65,7 @@
                     </div>
                     <div class="grid__block_bottom">
                         <p class="grid__block_title">Плато Шаджатмаз</p>
+                        <img class="grid__block_bottom_like_button" src="img/Like Button.svg" alt="Like Button">
                     </div>
                 </div>
                 <div class="grid__block">
@@ -69,6 +74,7 @@
                     </div>
                     <div class="grid__block_bottom">
                         <p class="grid__block_title">Верхняя Балкария</p>
+                        <img class="grid__block_bottom_like_button" src="img/Like Button.svg" alt="Like Button">
                     </div>
                 </div>
             </section>
