add popup feature

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
                     </div>
                 </div>
             </section>
+            <section class="popup">
+                <div class="popup__container">
+                    
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <p class="footer__title">© 2022 Mesto Russia</p>
