add popup feature

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 </head>
 <body>
     <div class="page">
+        <section class="popup">
+            <div class="popup__container">
+                <form class="popup__form">
+                    <fieldset class="form__edit_profile">
+                        <label for="first-name"></label>
+                        <input type="text" id="first-name" placeholder="Жак-Ив-Кусто">
+                    </fieldset>
+                    <fieldset class="form__edit_profile_subscription">
+                        <label for="subscription"></label>
+                        <input type="text" id="subscription" placeholder="Исследователь океана">
+                    </fieldset>
+                </form>
+            </div>
+        </section>
         <header class="header">
             <img class="header__logo" src="img/Vector.svg" alt="Mesto">
         </header>
@@ -76,11 +90,6 @@
                         <p class="grid__block_title">Верхняя Балкария</p>
                         <img class="grid__block_bottom_like_button" src="img/Like Button.svg" alt="Like Button">
                     </div>
-                </div>
-            </section>
-            <section class="popup">
-                <div class="popup__container">
-                    
                 </div>
             </section>
         </main>
