--- a/index.html
+++ b/index.html
@@ -9,22 +9,6 @@
 </head>
 <body>
     <div class="page">
-        <section class="popup">
-            <div class="popup__container">
-                <form class="popup__form">
-                    <div>
-                    <p class="popup__form_title">Редактировать профиль</p>
-                    </div>
-                    <div class="popup__input">
-                    <input type="text" id="first-name" placeholder="Жак-Ив-Кусто" class="popup__input_name">
-                    <input type="text" id="subscription" placeholder="Исследователь океана" class="popup__input_subscription">
-                    </div>
-                    <div class="popup__submit">
-                    <img class="popup__submit_button" src="img/Submit Button.svg" alt="Submit Button">
-                    </div>
-                </form>
-            </div>
-        </section>
         <header class="header">
             <img class="header__logo" src="img/Vector.svg" alt="Mesto">
         </header>
@@ -98,6 +82,24 @@
         <footer class="footer">
             <p class="footer__title">© 2022 Mesto Russia</p>
         </footer>
+        <div class="popup">
+            <div class="popup__body">
+                <div class="popup__content">
+                    <form class="popup__form">
+                        <div>
+                            <p class="popup__form_title">Редактировать профиль</p>
+                        </div>
+                        <div class="popup__input">
+                            <input type="text" id="first-name" placeholder="Жак-Ив-Кусто" class="popup__input_name" value="Жак-Ив-Кусто">
+                            <input type="text" id="subscription" placeholder="Исследователь океана" class="popup__input_subscription" value="Исследователь океана">
+                        </div>
+                        <button class="popup__save" type="button">
+                        <img class="popup__save_button" src="img/Save Button.svg" alt="Submit Button">
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
