add close button

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                         <img class="popup__save_button" src="img/Save Button.svg" alt="Submit Button">
                         </button>
                     </form>
+                    <button class="popup__close" type="button">
+                        <img class="popup__close_button" src="img/Close Button.svg" alt="Close Button">
+                    </button>
                 </div>
             </div>
         </div>
