change like button

--- a/index.html
+++ b/index.html
@@ -25,56 +25,56 @@
             <section class="photo-grid">
                 <div class="grid__block">
                     <div class="grid__block_head">
-                    <img class="grid__image" src="img/abdur-ahmanus-vrPqM2OB9nA-unsplash.jpg">
+                    <img class="grid__image" src="img/abdur-ahmanus-vrPqM2OB9nA-unsplash.jpg" alt="Карачаево-Черкессия">
                     </div>
                     <div class="grid__block_bottom">
                         <p class="grid__block_title">Карачаево-Черкессия</p>
-                        <img class="grid__block_bottom_like_button" src="img/Like Button.svg" alt="Like Button">
+                        <button class="grid__like_button"></button>
                     </div>
                 </div>
                 <div class="grid__block">
                     <div class="grid__block_head">
-                    <img class="grid__image" src="img/irina-shishkina-dp0Z-i7zYHc-unsplash.jpg">
+                    <img class="grid__image" src="img/irina-shishkina-dp0Z-i7zYHc-unsplash.jpg" alt="Домбай">
                     </div>
                     <div class="grid__block_bottom">
                         <p class="grid__block_title">Домбай</p>
-                        <img class="grid__block_bottom_like_button" src="img/Like Button.svg" alt="Like Button">
+                        <button class="grid__like_button"></button>
                     </div>
                 </div>
                 <div class="grid__block">
                     <div class="grid__block_head">
-                    <img class="grid__image" src="img/kirill-pershin-1404681-unsplash.png">
+                    <img class="grid__image" src="img/kirill-pershin-1404681-unsplash.png" alt="Гора Эльбрус">
                     </div>
                     <div class="grid__block_bottom">
                         <p class="grid__block_title">Гора Эльбрус</p>
-                        <img class="grid__block_bottom_like_button" src="img/Like Button.svg" alt="Like Button">
+                        <button class="grid__like_button"></button>
                     </div>
                 </div>
                 <div class="grid__block">
                     <div class="grid__block_head">
-                    <img class="grid__image" src="img/aisvri-vD35Kfjunog-unsplash.jpg">
+                    <img class="grid__image" src="img/aisvri-vD35Kfjunog-unsplash.jpg" alt="Тамбукан">
                     </div>
                     <div class="grid__block_bottom">
                         <p class="grid__block_title">Тамбукан</p>
-                        <img class="grid__block_bottom_like_button" src="img/Like Button.svg" alt="Like Button">
+                        <button class="grid__like_button"></button>
                     </div>
                 </div>
                 <div class="grid__block">
                     <div class="grid__block_head">
-                    <img class="grid__image" src="img/aisvri-LvJGgt1i-WY-unsplash.jpg">
+                    <img class="grid__image" src="img/aisvri-LvJGgt1i-WY-unsplash.jpg" alt="Плато Шаджатмаз">
                     </div>
                     <div class="grid__block_bottom">
                         <p class="grid__block_title">Плато Шаджатмаз</p>
-                        <img class="grid__block_bottom_like_button" src="img/Like Button.svg" alt="Like Button">
+                        <button class="grid__like_button"></button>
                     </div>
                 </div>
                 <div class="grid__block">
                     <div class="grid__block_head">
-                    <img class="grid__image" src="img/aisvri-yJpUeYBv6q8-unsplash.jpg">
+                    <img class="grid__image" src="img/aisvri-yJpUeYBv6q8-unsplash.jpg" alt="Верхняя Балкария">
                     </div>
                     <div class="grid__block_bottom">
                         <p class="grid__block_title">Верхняя Балкария</p>
-                        <img class="grid__block_bottom_like_button" src="img/Like Button.svg" alt="Like Button">
+                        <button class="grid__like_button"></button>
                     </div>
                 </div>
             </section>
@@ -104,5 +104,6 @@
             </div>
         </div>
     </div>
+    <script src="script/script.js"></script>
 </body>
 </html>
