change edit button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 class="profile__title">Жак-Ив-Кусто</h1>
                 <p class="profile__subtitle">Исследователь океана</p>
                 </div>
-                <img class="profile__edit_button" src="img/Edit Button.svg" alt="Edit Button">
+                <button class="profile__edit_button"></button>
                 <img class="profile__add_button" src="img/Add Button.svg" alt="Add Button">
             </div>
             <section class="photo-grid">
