change add button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p class="profile__subtitle">Исследователь океана</p>
                 </div>
                 <button class="profile__edit_button"></button>
-                <img class="profile__add_button" src="img/Add Button.svg" alt="Add Button">
+                <button class="profile__add_button"></button>
             </div>
             <section class="photo-grid">
                 <div class="grid__block">
