add branch feat/popup-open

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             </div>
         </div>
     </div>
+    <div class="bentley rolls-royce">Королевский гараж</div> 
     <script src="script/script.js"></script>
 </body>
 </html>
