--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                             <p class="popup__form_title">Редактировать профиль</p>
                         </div>
                         <div class="popup__input">
-                            <input type="text" id="first-name" placeholder="Жак-Ив-Кусто" class="popup__input_name" value="Жак-Ив-Кусто">
-                            <input type="text" id="subscription" placeholder="Исследователь океана" class="popup__input_subscription" value="Исследователь океана">
+                            <input type="text" id="first-name" placeholder="Жак-Ив-Кусто" class="popup__input_name">
+                            <input type="text" id="subscription" placeholder="Исследователь океана" class="popup__input_subscription">
                         </div>
                         <button class="popup__save" type="button">
                         <img class="popup__save_button" src="img/Save Button.svg" alt="Submit Button">
@@ -104,7 +104,6 @@
             </div>
         </div>
     </div>
-    <div class="bentley rolls-royce">Королевский гараж</div> 
     <script src="script/script.js"></script>
 </body>
 </html>
