add save feature

--- a/index.html
+++ b/index.html
@@ -90,14 +90,14 @@
                             <p class="popup__form_title">Редактировать профиль</p>
                         </div>
                         <div class="popup__input">
-                            <input type="text" id="first-name" placeholder="Жак-Ив-Кусто" class="popup__input_name">
-                            <input type="text" id="subscription" placeholder="Исследователь океана" class="popup__input_subscription">
+                            <input type="text" id="first-name" placeholder="Жак-Ив-Кусто" class="popup__input_name" value="Жак-Ив-Кусто">
+                            <input type="text" id="subscription" placeholder="Исследователь океана" class="popup__input_subscription" value="Исследователь океана">
                         </div>
-                        <button class="popup__save" type="button">
+                        <button class="popup__save">
                         <img class="popup__save_button" src="img/Save Button.svg" alt="Submit Button">
                         </button>
                     </form>
-                    <button class="popup__close" type="button">
+                    <button class="popup__close">
                         <img class="popup__close_button" src="img/Close Button.svg" alt="Close Button">
                     </button>
                 </div>
